--- a/dom-exercises/views/index.html
+++ b/dom-exercises/views/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body >
 
         <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, distinctio unde!
         </p>
@@ -15,14 +16,45 @@
         <button id="btn">click me!</button>-->
 
 
-            <!--<input id="name" type="text" placeholder="Enter First Name" />
-            <input id="Lname" type="text" placeholder="Enter Last Name" />
+            <!--<input id="name" type="text"  value="input"/>
+            <!--<input id="Lname" type="text" placeholder="Enter Last Name" />
             <button type="submit" id="btn">Click me</button>-->
 
 
         <!--<a id="anchor" hreflang="en" target="_blank" href="#">Hello</a>
         <button id="btn">click me!</button>-->
+        <!--<p>Click the button to add a new row at the first position of the table and then add cells and content.</p>
 
+        <table id="myTable">
+            <tr>
+                <td>Row1 cell1</td>
+                <td>Row1 cell2</td>
+            </tr>
+            <tr>
+                <td>Row2 cell1</td>
+                <td>Row2 cell2</td>
+            </tr>
+            <tr>
+                <td>Row3 cell1</td>
+                <td>Row3 cell2</td>
+            </tr>
+        </table>
+        <br>
+
+        <button onclick="myFunction()">Add it</button>
+        <button onclick="myFunction2()">Remove it</button>-->
+
+
+
+
+        <!--<button onclick="myFunction()">Size</button>
+
+
+
+        <p id="demo"></p>-->
+
+
+        <input  type="text"  value="input"/>
 
 
 
